--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -33,6 +33,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel
           python install -r requirements.txt
+          python install
+          
 
       - name: Lint with flake8
         run: |
