--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel
-          python install -r requirements.txt
+          python -m pip install -r requirements.txt
           
 
       - name: Lint with flake8
