--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -43,5 +43,5 @@ jobs:
       - name: Run unit tests with Nose
         run: nosetests
         env: 
-          DATABASE_URI: "postgresql://postgres:{password}@{service}:{port}/{database}"
+          DATABASE_URI: "postgresql://postgres:{password}@{service}:5432/{database}"
           
