--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ with-spec=1
 spec-color=1
 with-coverage=1
 cover-erase=1
-cover-package=stack
+cover-package=service
 
 [coverage:report]
 show_missing = True
